Cambios personalizacion cliente VTR
Se realiza cambio nombre clases y constructores

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>LIB_GESCOM_BECH</name>
+	<name>gescom-vtr-libgescom</name>
 	<comment></comment>
 	<projects>
 	</projects>
