--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_191"/>
-	<classpathentry kind="lib" path="C:/Falegria/LAN/workspaces/composer/LIB_GESCOM_BECH/lib/json.jar"/>
-	<classpathentry kind="lib" path="C:/Falegria/LAN/workspaces/composer/LIB_GESCOM_BECH/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="C:/Falegria/LAN/workspaces/composer/LIB_GESCOM_BECH/lib/log4j-1.2.11.jar"/>
-	<classpathentry kind="lib" path="C:/Falegria/LAN/workspaces/composer/LIB_GESCOM_BECH/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="C:/Falegria/VTR/2019/lib/json.jar"/>
+	<classpathentry kind="lib" path="C:/Falegria/VTR/2019/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="C:/Falegria/VTR/2019/lib/log4j-1.2.14.jar"/>
+	<classpathentry kind="lib" path="C:/Falegria/VTR/2019/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
